--- a/style.css
+++ b/style.css
@@ -5,5 +5,9 @@ body {
   font-family: 'Roboto Slab', serif;
 }
 canvas {
-  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
