--- a/vanilla/grid/style.css
+++ b/vanilla/grid/style.css
@@ -4,10 +4,4 @@
   box-sizing: border-box;
 }
 
-#canvas1 {
-  border: 1px solid;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+#canvas1 {}
